; ModuleID = '/home/carl/AnghaBench/vlc/compat/extr_sincos.c_sincosf.c'
source_filename = "/home/carl/AnghaBench/vlc/compat/extr_sincos.c_sincosf.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @sincosf(float %0, float* noalias %1, float* noalias %2) #0 {
  %4 = alloca float, align 4
  %5 = alloca float*, align 8
  %6 = alloca float*, align 8
  store float %0, float* %4, align 4
  store float* %1, float** %5, align 8
  store float* %2, float** %6, align 8
  %7 = load float, float* %4, align 4
  %8 = call float @sinf(float %7) #2
  %9 = load float*, float** %5, align 8
  store float %8, float* %9, align 4
  %10 = load float, float* %4, align 4
  %11 = call float @cosf(float %10) #2
  %12 = load float*, float** %6, align 8
  store float %11, float* %12, align 4
  ret void
}

; Function Attrs: nounwind
declare dso_local float @sinf(float) #1

; Function Attrs: nounwind
declare dso_local float @cosf(float) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
